Fireworks: Qs tile morphing options

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -389,7 +389,6 @@
     <string name="combined_status_bar_signal_icons_summary">Show single combined icon for WiFi and mobile signal</string>
 
     <!-- QS footer text -->
-    <string name="qs_footer_category">Qs Footer Customization</string>
     <string name="qs_footer_text_show_title">Show QS footer text</string>
     <string name="qs_footer_text_string_title">Customize footer text</string>
     <string name="qs_footer_text_string_summary">Set to empty for default Spark</string>
@@ -803,4 +802,8 @@
     <string name="status_bar_battery_style_icon_landscape_musku">Portrait IOS</string>
     <string name="status_bar_battery_style_icon_landscape_signal">Landscape Airoo</string>
     <string name="status_bar_battery_style_icon_landscape_buddy">Landscape Capsule</string>
+
+    <!-- Qs Morphing-->
+    <string name="qs_enable_morphing">Enable Morphing on qs tiles</string>
+    <string name="qs_invert_morphing">Swap Morphing on qs tiles</string>  
 </resources>
